change index.html file

--- a/homework-02/index.html
+++ b/homework-02/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="root"> </div>
-    <script src="homework-02/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
